--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,3 @@
-@import "bootstrap/bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Ubuntu+Condensed|Ubuntu+Mono:400,700|Ubuntu:400,400i,700');
+@import 'bootstrap/bootstrap';
+@import 'header';
