Update about and experience sections

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Ubuntu+Condensed|Ubuntu+Mono:400,700|Ubuntu:400,400i,700');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu+Condensed|Ubuntu:400,400i,700,700i');
 @import 'variables';
 @import 'bootstrap/bootstrap';
 @import 'header';
