--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -1,4 +1,99 @@
 section {
-    padding-top: 2em;
-    padding-bottom: 2em;
+    padding-top: calc(3em + 79px);
+    padding-bottom: calc(3em + 79px);
+    &:nth-of-type(2n+3) {
+        background: $gray-300;
+    }
+    &.hero {
+        background-color: $gray-800;
+        color: rgba(#fff, 0.8);
+        padding-top: 9em;
+        .photo {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            border: 3px solid #fff;
+            overflow: hidden;
+            margin: auto;
+            img {
+                width: 100%;
+            }
+        }
+        .name {
+            padding-top: 1.5em;
+            padding-bottom: 1.5em;
+            h1 {
+                margin: 0;
+                text-transform: uppercase;
+                text-align: center;
+                span {
+                    &:last-of-type {
+                        color: lighten($primary, 5%);
+                    }
+                }
+            }
+        }
+        .separator {
+            margin-top: 0;
+        }
+        .title {
+            h2 {
+                text-align: center;
+            }
+        }
+    }
+    &.about {
+        .about-title {
+            h2 {
+                text-transform: uppercase;
+                text-align: center;
+                font-size: $h1-font-size;
+                span {
+                    &:last-of-type {
+                        color: $primary;
+                    }
+                }
+            }
+        }
+        .contact-info {
+            text-align: center;
+            font-size: 1.5em;
+        }
+        .about-content {
+            p {
+                font-size: 1.2em;
+                text-align: center;
+            }
+        }
+        .social-icons {
+            text-align: center;
+            font-size: $h2-font-size;
+            ul {
+                list-style-type: none;
+                padding: 0;
+                margin: 0;
+                li {
+                    display: inline-block;
+                    padding: {
+                        left: 0.5em;
+                        right: 0.5em;;
+                    }
+                }
+            }
+        }
+    }
+    &.experience {
+        .experience-title {
+            h2 {
+                text-transform: uppercase;
+                text-align: center;
+                font-size: $h1-font-size;
+                span {
+                    &:last-of-type {
+                        color: $primary;
+                    }
+                }
+            }
+        }
+    }
 }
