--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -7,7 +7,7 @@ section {
     &.hero {
         background-color: $gray-800;
         color: rgba(#fff, 0.8);
-        padding-top: 9em;
+        padding-top: calc(3em + 197px);
         .photo {
             width: 200px;
             height: 200px;
@@ -114,6 +114,7 @@ section {
 
                 }
                 .item-dates {
+                    text-transform: uppercase;
                     span:not(.start):not(.end) {
                         color: $secondary;
                     }
@@ -156,6 +157,7 @@ section {
 
                 }
                 .item-dates {
+                    text-transform: uppercase;
                     span:not(.start):not(.end) {
                         color: $secondary;
                     }
