--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -10,6 +10,13 @@
             transition: width 0.25s ease-out;
         }
     }
+    .navbar-nav {
+        li {
+            a {
+                font-size: 1.25rem;
+            }
+        }
+    }
     &.small-header {
         padding: {
             top: 0.75em;
