--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -145,4 +145,44 @@ section {
             }
         }
     }
+    &.skills {
+        .section-subtitle {
+            text-transform: uppercase;
+            &:not(.reverse) {
+                span:first-of-type {
+                    color: $primary;
+                }
+            }
+            &.reverse {
+                span:last-of-type {
+                    color: $primary;
+                }
+            }
+        }
+        .skill-list {
+            ul {
+                list-style-type: none;
+                padding: 0;
+                margin: 0;
+                li {
+                    display: inline-block;
+                    padding: 0.5rem;
+                    svg {
+                        font-size: 2.5rem;
+                        opacity: 0.5;
+                        transition: all 0.25s ease-out;
+                    }
+                    &:hover {
+                        svg {
+                            color: $primary;
+                            opacity: 1;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    &.contact {
+        text-align: left;
+    }
 }
