Update form styling and add netlify functionality

--- a/src/scss/_floatinglabels.scss
+++ b/src/scss/_floatinglabels.scss
@@ -54,6 +54,14 @@
             color: #777;
         }
     }
+    
+    .form-control {
+        border-radius: 0;
+        border-bottom: 3px solid $primary;
+        &.hadFocus:not(:valid):not(:focus) {
+            border-color: $danger;
+        }
+    }
 }
 
 /* Fallback for Edge
