Finish first iteration of website

--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -184,5 +184,8 @@ section {
     }
     &.contact {
         text-align: left;
+        .recaptcha {
+            margin-bottom: 1rem;
+        }
     }
 }
