Update list styling again

--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -185,6 +185,7 @@ section {
             ul {
                 max-width: 20rem;
                 text-align: left;
+                margin: auto;
             }
         }
     }
