--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 $primary: #66669a;
+$secondary: #6c757d;
 $body-bg: #f0f0f0;
 
-$font-family-sans-serif: 'Ubuntu', sans-serif;
+$font-family-sans-serif: 'Montserrat', sans-serif;
 $headings-font-family: 'Ubuntu Condensed', sans-serif;
