--- a/src/assets/scss/_shared.scss
+++ b/src/assets/scss/_shared.scss
@@ -1,15 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500|Ubuntu+Condensed&display=swap');
+
 section {
     padding-top: calc(3em + 79px);
     padding-bottom: calc(3em + 79px);
     text-align: center;
     &:nth-of-type(2n+3) {
-        background: $gray-300;
+        background: #dee2e6;
     }
     .section-title {
         h2 {
             text-transform: uppercase;
             text-align: center;
-            font-size: $h1-font-size;
+            font-size: 2.5rem;
             span {
                 &:last-of-type {
                     color: $primary;
