--- a/src/assets/scss/_shared.scss
+++ b/src/assets/scss/_shared.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500|Ubuntu+Condensed&display=swap');
+
 section {
     padding-top: calc(3em + 79px);
     padding-bottom: calc(3em + 79px);
