--- a/src/assets/scss/_shared.scss
+++ b/src/assets/scss/_shared.scss
@@ -14,7 +14,7 @@ section {
             font-size: 2.5rem;
             span {
                 &:last-of-type {
-                    color: $primary;
+                    color: darken($primary, 10%);
                 }
             }
         }
