--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,4 +3,4 @@ $secondary: #6c757d;
 $body-bg: #f0f0f0;
 
 $font-family-sans-serif: 'Montserrat', sans-serif;
-$headings-font-family: 'Ubuntu Condensed', sans-serif;
+$headings-font-family: 'Oxygen', sans-serif;
