--- a/src/assets/scss/_shared.scss
+++ b/src/assets/scss/_shared.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Oxygen:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Barlow+Semi+Condensed:wght@400;500&display=swap');
 
 section {
     padding-top: calc(3em + 79px);
